--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ fxhash = "0.2.1"
 indexmap = "1.9.3"
 once_cell = "1.17.1"
 prost = "0.11.9"
+quick_cache = "0.3.0"
 serde = "1.0.160"
 serde_derive = "1.0.160"
 
-maxwell-client = {git = "https://github.com/maxwell-dev/maxwell-client-rust.git", tag = "v0.8.1"}
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.1"}
-# maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.6.0"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.3"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.8.5"}
