--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,5 @@ serde = "1.0.160"
 serde_derive = "1.0.160"
 
 maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.10.8"}
-
-# maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.8.5"}
-
-maxwell-utils = {path = "/Users/xuchaoqian/codebase/bitbros/maxwell/maxwell-utils-impls/maxwell-utils-rust"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.9.0"}
+# maxwell-utils = {path = "../../maxwell-utils-impls/maxwell-utils-rust"}
