--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,7 @@ anyhow = "1.0.75"
 bytes = "1.4.0"
 dashmap = "5.5.1"
 dycovec = "0.1.1"
-evmap = "10.0.2"
-fxhash = "0.2.1"
+flurry = "0.4.0"
 indexmap = "2.0.0"
 once_cell = "1.18.0"
 prost = "0.11.9"
