--- a/config/config.template.toml
+++ b/config/config.template.toml
@@ -1,8 +1,10 @@
 [server]
 backlog = 2048
+cert_file = "certificates/localhost.crt"
 http_port = 10000
 https_port = 11443
 keep_alive = 5
+key_file = "certificates/localhost.key"
 max_connection_rate = 1024
 max_connections = 100000
 max_frame_size = 134217728
