--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,16 @@ tokio = {version = "1.32.0", features = ["full"]}
 
 ahash = "0.8.3"
 anyhow = "1.0.75"
-bytes = "1.4.0"
+bytes = "1.5.0"
 dashmap = "5.5.3"
 dycovec = "0.1.1"
-flurry = "0.4.0"
 indexmap = "2.0.0"
+moka-cht = "0.5.0"
 once_cell = "1.18.0"
-prost = "0.12.0"
-quick_cache = "0.4.0"
+prost = "0.12.1"
+quick_cache = {git = "https://github.com/xuchaoqian/quick-cache.git", branch = "master"}
 serde = "1.0.188"
 serde_derive = "1.0.188"
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.15.2"}
-maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.2"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.15.3"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.3"}
