--- a/config/config.template.toml
+++ b/config/config.template.toml
@@ -14,7 +14,9 @@ workers = 8
 endpoints = ["localhost:8081"]
 
 [handler]
+connection_cache_size = 16
 connection_pool_slot_size = 8
+id_recip_map_size = 10000
 max_continuous_disconnected_times = 10
 pull_timeout = 5
 request_timeout = 5
