--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ anyhow = "1.0.75"
 bytes = "1.5.0"
 dashmap = "5.5.3"
 indexmap = "2.0.0"
-lru = "0.12.0"
+moka = {version = "0.12.1", default-features = false, features = ["sync", "future"]}
 once_cell = "1.18.0"
 quick_cache = {git = "https://github.com/xuchaoqian/quick-cache.git", branch = "master"}
 serde = "1.0.188"
