--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,13 @@ log = "0.4.20"
 log4rs = "1.2.0"
 
 actix = "0.13.1"
+actix-cors = "0.6.4"
 actix-http = "3.4.0"
 actix-web = {version = "4.4.0", features = ["rustls-0_21"]}
 actix-web-actors = "4.2.0"
 futures = "0.3.28"
 futures-intrusive = "0.5.0"
+reqwest = {version = "0.11.22", features = ["stream"]}
 rustls = "0.21.7"
 rustls-pemfile = "1.0.3"
 tokio = {version = "1.32.0", features = ["full"]}
@@ -26,9 +28,12 @@ dashmap = "5.5.3"
 indexmap = "2.0.0"
 moka = {version = "0.12.1", default-features = false, features = ["sync", "future"]}
 once_cell = "1.18.0"
+quanta = "0.12.1"
 quick_cache = {git = "https://github.com/xuchaoqian/quick-cache.git", branch = "master"}
 serde = "1.0.188"
 serde_derive = "1.0.188"
 
 maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.20.0"}
-maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.10"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.11"}
+
+# console-subscriber = "0.2.0"
