--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,7 @@ maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.
 maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.11"}
 
 # console-subscriber = "0.2.0"
+tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}
+
+[profile.release]
+debug = true
