--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,15 +29,13 @@ indexmap = "2.1.0"
 moka = {version = "0.12.1", default-features = false, features = ["sync", "future"]}
 once_cell = "1.19.0"
 quanta = "0.12.1"
-quick_cache = {git = "https://github.com/xuchaoqian/quick-cache.git", branch = "master"}
+quick_cache = "0.4.1"
 serde = "1.0.193"
 serde_derive = "1.0.193"
+tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}
 
 maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.21.0"}
 maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.23"}
-
-# console-subscriber = "0.2.0"
-tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}
 
 [profile.release]
 debug = true
