feat: support http methods

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,37 +5,39 @@ name = "maxwell-frontend"
 version = "0.5.1"
 
 [dependencies]
-config = "0.13.4"
-log = "0.4.20"
-log4rs = "1.2.0"
+config = "0.14.0"
+log = "0.4.21"
+log4rs = "1.3.0"
 
-actix = "0.13.1"
+actix = "0.13.3"
 actix-cors = "0.6.5"
-actix-http = "3.4.0"
-actix-web = {version = "4.4.0", features = ["rustls-0_21"]}
-actix-web-actors = "4.2.0"
-futures = "0.3.29"
+actix-http = "3.6.0"
+actix-web = {version = "4.5.1", features = ["rustls-0_21"]}
+actix-web-actors = "4.3.0"
+futures = "0.3.30"
 futures-intrusive = "0.5.0"
-reqwest = {version = "0.11.22", features = ["stream"]}
+matchit = "0.8.0"
+reqwest = {version = "0.11.26", features = ["stream"]}
 rustls = "0.21.10"
 rustls-pemfile = "1.0.4"
-tokio = {version = "1.34.0", features = ["full"]}
+tokio = {version = "1.36.0", features = ["full"]}
 
-ahash = "0.8.6"
-anyhow = "1.0.75"
+ahash = "0.8.11"
+anyhow = "1.0.81"
+arc-swap = "1.6.0"
 bytes = "1.5.0"
 dashmap = "5.5.3"
-indexmap = "2.1.0"
-moka = {version = "0.12.1", default-features = false, features = ["sync", "future"]}
+indexmap = "2.2.5"
+moka = {version = "0.12.5", default-features = false, features = ["sync", "future"]}
 once_cell = "1.19.0"
 quanta = "0.12.2"
 quick_cache = "0.4.1"
-serde = "1.0.193"
-serde_derive = "1.0.193"
+serde = "1.0.197"
+serde_derive = "1.0.197"
 tikv-jemallocator = {version = "0.5.4", features = ["profiling"]}
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.21.0"}
-maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.23"}
+maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.22.1"}
+maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.10.26"}
 
 [profile.release]
 debug = true
