--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
 edition = "2021"
 name = "maxwell-frontend"
-version = "0.9.1"
+version = "0.9.2"
 
 [dependencies]
 config = "0.14.0"
@@ -36,5 +36,5 @@ serde = "1.0.210"
 serde_derive = "1.0.210"
 tikv-jemallocator = {version = "0.6.0", features = ["profiling"]}
 
-maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.24.1"}
-maxwell-utils = {git = "https://github.com/maxwell-dev/maxwell-utils-rust.git", tag = "v0.11.0"}
+maxwell-protocol = "0.24.3"
+maxwell-utils = "0.11.1"
